--- a/typescript/3.markdown
+++ b/typescript/3.markdown
@@ -1,134 +1,255 @@
->收集在学习`深入浅出TypeScript：从基础知识到类型编程`小册过程中所做的一些笔记，第2期为`条件类型`。
-## 条件类型
-一般来说，在不确定具体类型的时候可以通过泛型来传入使用泛型，但是有时候我们无法确定使用哪个泛型。或者说具体使用哪个类型依赖于外部或者内部的某些条件，这就有点类似于js中的条件判断语句`if(){} else{}`，因此ts引入了条件类型。
-
-条件类型够表示非统一的类型,以一个条件表达式进行类型关系检测，从而在两种类型中选择其一.ts中的条件类型使用方法类似于js中的三目运算符：
+>收集在学习`深入浅出TypeScript：从基础知识到类型编程`小册过程中所做的一些笔记，第3期为`infer关键字`。
+## infer关键字
+`infer`最早出现在此 PR 中，表示在`extends`条件语句中**待推断**的类型变量。在定义上，我个人认为关键字是**待推断**这三个字。
+个人认为表示`infer`的类型无法得到但是能够ts的类型推断推导出来。感觉上与泛型有点类似，提前声明一个未知的变量,不过不同的是泛型在使用时必须传值因此可以确定具体类型，`infer`至始至终都无法得知具体类型只能通过类型推断来推导出来。
+干巴巴说没啥用，上个栗子看下：
 ```ts
-type Test<T,U> = T extends U ? X : U
-//若 T 能够赋值给 U，那么类型是 X，否则为 Y
+// infer P 表示待推断的类型
+type ParamType<T> = T extends (param: infer P) => any ? P : T;
 ```
->只有相应的条件匹配了，条件类型才会匹配出相应的类型。看起来与三目运算符一样是挺简单的，事实上并非如此。
+上面的类型表示如果传入的泛型`T`能赋值给函数类型`(param: infer P) => any`，那么就返回函数类型化`(param: infer P) => any`中的`P`,也就是函数的传参类型`param`。不然的话返回泛型T。
 ```ts
-// 下面是两个使用条件类型的例子
-// 根据三目我以为第一个返回的是T即 string | number
-// 第二个返回 never类型
-// 事实上并非如此
-type Same<T, U> = T extends U ? T : never;
-type same = Same<string | number, number>;  // 返回的是number
-
-type Diff<T, U> = T extends U ? never : T;
-type diff = Diff<string | number, number | boolean>;  // 返回的是string
-```
-那么问题出在哪里呢？其实是因为例子中条件类型T是**联合类型**，如果T类型不是联合类型那么是符合三目运算符的正常逻辑的。接下来我们先放开这个例子，直接探究具体的原因。
-
-## 条件类型与联合类型
-> 以下部分内容节选自《深入浅出typescript》小册
-
-条件类型有一个特性,就是「分布式有条件类型」,但是分布式有条件类型是有前提的,条件类型里待检查的类型必须是`naked type parameter`。
-
-好了,肯定有人已经晕了,什么是分布式有条件类型?`naked type parameter`又是什么?
-
-`naked type parameter`指的是**裸类型参数**,怎么理解?这个「裸」是指类型参数没有被包装在其他类型里,比如没有被数组、元组、函数、Promise等等包裹。
-
-我们举个简单的例子:
-```ts
-// 裸类型参数,没有被任何其他类型包裹即T
-type NakedUsage<T> = T extends boolean ? "YES" : "NO"
-// 类型参数被包裹的在元组内即[T]
-type WrappedUsage<T> = [T] extends [boolean] ? "YES" : "NO";
-```
-好了,`naked type parameter`我们了解了之后,「**分布式有条件类型**」就相对容易理解了,按照官方文档的说法是「**分布式有条件类型在实例化时会自动分发成联合类型**」。
-
-这个说法很绕,我们直接看例子:
-```ts
-type Distributed = NakedUsage<number | boolean> //  = NakedUsage<number> | NakedUsage<boolean> =  "NO" | "YES"
-type NotDistributed = WrappedUsage<number | boolean > // "NO"
-```
-当我们给类型`NakedUsage`加入联合类型`number | boolean`时,它的结果返回`"NO" | "YES"`,相当于联合类型中的number和boolean分别赋予了`NakedUsage<T>`然后再返回出一个联合类型,这个操作大家可以类比JavaScript中的Array.map()。
-
-我们看`NotDistributed`的结果,他接受的同样是联合类型`number | boolean`,但是返回一个特定的类型"NO",而非一个联合类型,就是因为他的类型参数是被包裹的即[`<T>`],不会产生分布式有条件类型的特性。
-
-**总结：** 在条件类型中如果类型没被包裹（**裸类型参数**）并且是**联合类型**的话就会在实例化时自动分化成**联合类型**。
-所以回顾之前的例子：
-```ts
-// Same 和 Diff的类型都是裸类型参数并且是联合类型
-// 所以其实实例化时的会自动分化成联合类型
-type Same<T, U> = T extends U ? T : never;
-type same = Same<string | number, number>;  // 返回的是number
-// 转化成下面的这个类型 这样子就不难得出是number类型了
-type equalSame = Same<string, number> | Same<number, number> //返回number
-
-type Diff<T, U> = T extends U ? never : T;
-type diff = Diff<string | number, number | boolean>;  // 返回的是string
-// 同理转化为
-type equalDiff = Diff<string, number> | Same<number, number> //返回string
-```
-## 条件类型，映射类型和索引类型的高级使用
-假设我有一个interface类型，现在我需要编写一个工具类型。这个工具类型接受一个U泛型把interface中符合U泛型的类型全部筛选出来组成一个新的接口interface。
-
-```ts
-interface Part {
-  id: number;
+interface User {
   name: string;
-  subparts: Part[];
-  updatePart(newName: string): void;
+  age: number;
 }
+type ParamType<T> = T extends (param: infer P) => any ? P : T;
+type Func = (user: User) => void;
 
-type FilterInterface<T, U> = 如何编写
-
-type FilterNumber = FilterInterface<Part, number>
-/*
-type FilterNumber = {
-    id: number;
-}
-*/
-
-type FilterNumberOrFunction = FilterInterface<Part, number | Function>;
-/*
-type FilterNumberOrFunction = {
-    id: number;
-    updatePart: (newName: string) => void;
-}
-*/
+type Param = ParamType<Func>; // Param = User
+type AA = ParamType<string>; // string
 ```
-实际效果图:
-![alt](http://pzxbfjvwp.bkt.clouddn.com/FpWwi3kdfndslRsj-T721K72UeHs)
-### 接下来一步一步的分析拆解
-1. 首先通过`keyof T`索引类型获取T的**字符串联合类型**。
-![alt](http://pzxbfjvwp.bkt.clouddn.com/FrvEt1UZStCJUKrs_Q7V4JAfh0Qe)
-2. 通过映射类型`[K in keyof T]`获取到每一个键值字符串,通过`T[K]`获取到每一个interface的value。这时K相当于interface的key,`T[K]`相当于interface的value。<br>
-![alt](http://pzxbfjvwp.bkt.clouddn.com/FoPwhTgldlic-YdBkpDrakvySWQO)
-
-3. 通过条件类型`T[K] extends U ? K : never`验证当前的`T[K]`是否符合传入的泛型U。是的话把映射出来的类型K（相当于interface的key）保留下来（后面有用）,不是的话保留`never`。
-4. 通过`{ [K in keyof T] : T[K] extends U ? K : never}`获取符合泛型U的新interface，不符合的会被置为`never`类型。
-![alt](http://pzxbfjvwp.bkt.clouddn.com/Fi2dyrAb5emS_dZBLGpgkIeZZFqR)
-
-5. 通过`({ [K in keyof T] : T[K] extends U ? K : never})[keyof T]`再次使用索引类型获取不为`never`类型的联合类型key。
-![alt](http://pzxbfjvwp.bkt.clouddn.com/Fsgmg81I_mvqCart0favXg4UZGuX)
-
-6. 使用内置的`Pick`工具类型把第五步的字符串联合类型转化为最终的interface接口。
-![alt](http://pzxbfjvwp.bkt.clouddn.com/FnURanesnA97OjwtkqNVxYvNg19F)
-
-其中Pick<T,K>是内置函数，作用是从`T`中取出一系列`K`的属性。具体使用方法以及原理可以见下图。
-
-![alt](http://pzxbfjvwp.bkt.clouddn.com/FtZcwVPln8BIEs9iMkP91P4JN8RQ)
-
-## 总结
-**索引类型，条件类型， 映射类型**的组合常用来做一些工具类型，ts的内置类型工具如`Pick,Exclude`等都是借用三个高级类型编写而来。
-
-对于一些复杂的工具库而言，普遍的思想是通过映射类型和索引类型获取到需要的字符串类型接口如上面的步骤3的接口。
+### ReturnType 提取函数返回类型
+同理，我们可以把上面的待推断类型`inter P`用在函数返回值上，实现一个接受函数泛型返回函数泛型返回值的类型工具，这个类型工具其实也就是ts内置类型ReturnType的实现。
 ```ts
-type R = {
-    id: 'id';
-    name: never;
-    subparts: never;
-    updatePart: never;
+
+type MyReturnType<T extends (...args: any[]) => any> = T extends (...args: any[]) => infer P ? P : any
+
+interface Fun {
+    (params: string) : string | number
+}
+type FunReturnType1 = MyReturnType<Fun> // string | number
+
+type FunReturnType2 = ReturnType<Fun> // string | number
+```
+### ConstructorParameters 提取构造函数中参数（实例）类型
+`infer`同样可以使用在提取类的构造函数返回类型上，构造函数一般用两种类型来表示.
+```ts
+//类表示
+class A {
+    public constructor(paramsA: string, paramsB: number | boolean) { }
+}
+// 函数表示
+interface B {
+    new (paramsA: string, paramsB: number | boolean) : any
 }
 ```
-**其中对于不需要或者需要删除的类型，值赋值给`never`,需要保留的类型就把相应的`key`名赋值给`value`，就如`id: 'id'`。这样子在通过一次索引类型获取到需要的联合类型字符串`'id' | 'name'`。最后通过相应的工具类型例如`Pick`达到最终需要的类型。**
+因此我们可以实现一个就收构建函数泛型返回构造函数参数类型的类型工具，这个类型工具其实也是ts内置原型`ConstructorParameters`的实现
+```ts
+type MyConstructorParameters<T extends new (...args: any[]) => any> = T extends new (...args: infer P) => any ?
+P
+:
+never
 
+type AParamsType1 = MyConstructorParameters<typeof A> // [string, number | boolean]
+type AParamsType2 = ConstructorParameters<typeof A> // [string, number | boolean]
 
+type BParamsType1 = MyConstructorParameters<B> // [(a: string) => boolean, number | boolean]
+type BParamsType2 = ConstructorParameters<B> // [(a: string) => boolean, number | boolean]
+```
+1. 其中`T extends new (...args: any[]) => any`是泛型约束，约束传入的泛型T必须是构造函数。
+2. `T extends new (...args: infer P) => any`后续的`infer P`推断类型P来获取构造函数的参数类型。
 
+## infer的骚操作
+>以下的内容摘自《深入理解typescript》
 
+至此，相信你已经对 infer 已有基本了解，我们来看看一些使用它的「骚操作」：
+1. tuple转union(元组转联合类型) ，如：`[string, number] -> string | number`
+解答之前，我们需要了解 tuple 类型在一定条件下，是可以赋值给数组类型：
+```ts
+type TTuple = [string, number];
+type TArray = Array<string | number>;
 
+type Res = TTuple extends TArray ? true : false; // true
+type ResO = TArray extends TTuple ? true : false; // false
+```
+因此，在配合 infer 时，这很容做到：
+```ts
+type ElementOf<T> = T extends Array<infer E> ? E : never;
+type TTuple = [string, number];
+type ToUnion = ElementOf<TTuple>; // string | number
+```
+2. union 转 intersection(联合转交叉类型)，如：`string | number -> string & number`
+```ts
+type UnionToIntersection<U> = (U extends any ? (k: U) => void : never) extends ((k: infer I) => void) ? I : never;
 
+type Result = UnionToIntersection<T1 | T2>; // T1 & T2
+```
+## 综合应用
+> 接下来的内容呢，是我在看一个知乎关于`react hook`的使用所整理处理的依次ts高级类型的综合应用。  
+
+知乎上关于[**如何去合理使用 React hook？**](https://www.zhihu.com/question/357020049)的回答。
+
+其中一个通用封装hooks的hook方法按答主是这样子的。  
+```js
+export const useMethods = (initialValue, methods) => {
+    const [value, setValue] = useState(initialValue);
+    const boundMethods = useMemo(
+        () => Object.entries(methods).reduce(
+            (methods, [name, fn]) => {
+                const method = (...args) => {
+                    setValue(value => fn(value, ...args));
+                };
+                methods[name] = method;
+                return methods;
+            },
+            {}
+        ),
+        [methods]
+    );
+    return [value, boundMethods];
+};
+```  
+于是呢，我就想着换成ts版本的写法会怎么样呢。接下来是我第一版的写法。  
+
+### 第一版
+```ts
+// 对传入的methods进行约束的类型
+interface Methods<T> {
+  [keys: string]: (value: T, ...args: any[]) => T;
+}
+
+// 返回对象为一个新的对象函数
+type ReturnMethods = {
+  [keys: string]: (...args: any[]) => void;
+}
+function useMethods<T, K extends Methods<T>>(
+  initState: T,
+  methods: K
+): [T, ReturnMethods] {
+  const [value, setValue] = useState<T>(() => initState);
+  const boundMethods = Object.keys(methods).reduce((newMethods, name) => {
+    const fn = methods[name];
+    newMethods[name] = (...args: any[]) => {
+      setValue(value => fn(value, ...args));
+    }
+    return newMethods;
+  }, {} as ReturnMethods);
+  return [value, boundMethods];
+}
+
+interface NumberMethods{
+  increment: (value: number) => number
+  decrement: (value: number) => number
+}
+const methods:Methods<number> = {
+  increment(value) {
+    return value + 1;
+  },
+  decrement(value) {
+    return value - 1;
+  },
+  addNumber(value, num: number){
+    return value + num
+  }
+}
+
+```
+**第一版能够传入约束的对象，但是返回的`returnMthods`方法没有推导出来声明是methods的`increment descrement addNumber`方法**。所以我又写了第二版
+
+### 第二版
+从上文不难看出，传入的methods方法和返回的returnMethods其实是有联系的。`methods`和`returnMethods`中key值时一一对应的，唯一不同的就是属性值返回的是一个新的函数，这个函数的参数不用传value值。所以可以大致得出以下思路：
+1. 返回相同的key可以通过映射类型`[P in keyof U]`进行映射获取
+2. 剔除掉value的函数参数类型我们可以通过`infer`关键字进行获取  
+
+```ts
+interface Methods<T> {
+  [keys: string]: (value: T, ...args: any[]) => T;
+}
+
+// 获取除了state本身自外的其他函数参数
+type GetExtraParams<U, T> = U extends (value: T, ...args: infer P) => void ? P : never
+
+// 映射类型生成返回的函数对象
+type ReturnMethods<U, T> = {
+  [P in keyof U]: (...args: GetExtraParams<U[P], T>) => void;
+}
+
+function useReducerHook<T, K extends Methods<T>>(
+  initState: T,
+  methods: K
+): [T, ReturnMethods<K, T>] {
+  const [value, setValue] = useState<T>(() => initState);
+  const methodsTypes = Object.keys(methods) as Array<keyof K>
+  const boundMethods = methodsTypes.reduce((newMethods, name) => {
+    const fn = methods[name];
+    newMethods[name] = (...args: any[]) => {
+      setValue(value => fn(value, ...args));
+    }
+    return newMethods;
+  }, {} as ReturnMethods<K, T>);
+  return [value, boundMethods];
+}
+
+interface NumberMethods{
+  increment: (value: number) => number
+  decrement: (value: number) => number
+  addNumber: (value: number, num:number) => number
+}
+//const methods:Methods<number>
+const methods = {
+  increment(value: number) {
+    return value + 1;
+  },
+  decrement(value: number) {
+    return value - 1;
+  },
+  addNumber(value: number, num: number){
+    return value + num
+  }
+}
+const [value, hhhh] = useReducerHook(1, methods);
+
+hhhh.addNumber('123')
+//报错 而且也有代码提示
+// 看似很完美 其实还有坑 可以看下methods的类型声明 要是换成NumberMethods 或者 Methods<number>呢
+```  
+
+这一版我们做了很大的改进，现在返回的`returnMethods`已经有了代码提示，而且对于参数也进行了限制，看似非常完美但是其实有个很大的坑。具体看一下methods的类型声明，我是直接写在变量声明时。    
+
+如果我们换成了类型声明换成上面的`NumberMethods`或者`Methods<number>`就会出问题了。  
+
+1. 换成`NumberMethods`有个缺少索引签名的报错，函数参数类型丢失了没有进行约束（可以通过 `NumberMethods extends Methods<Number>`解决）
+2. 换成`Methods<number>`干脆啥都没有了，连函数`addNumber`提示都丢失了。  
+
+#### 问题
+问题所在就是因为我们在约束Methods时用的是**索引签名**。  索引签名的名称（如：`{ [index: string]: { message: string } }` 里的 index ）除了可读性外，并没有任何意义。
+
+```ts
+interface Methods<T> {
+  [keys: string]: (value: T, ...args: any[]) => T;
+}
+
+type ReturnMethods<U, T> = {
+    // 索引签名会导致这里的P永远是string类型
+  [P in keyof U]: (...args: GetExtraParams<U[P], T>) => void;
+}
+```  
+
+对于`NumberMethods`,可以通过 `NumberMethods extends Methods<Number>`解决的原因在于，`NumberMethods`缺少索引签名，所以通过extends的方式加上索引签名。虽说这样子可以解决，但是我拒绝以后写类型都要加上extends。
+
+### 第三版
+从上面看出，罪魁祸首就是索引签名，所以我得解决办法依托于如果把索引签名干掉同时又对Methods进行函数约束。万般尝试下，我发现了`never`类型的解决办法。
+
+```ts
+// interface Methods<T> {
+//   [keys: string]: (value: T, ...args: any[]) => T;
+// }
+// 把Methods替换成了FilterMethods
+
+// 筛选出符合函数的类型
+type FilterMethods<K, U> = {
+  [P in keyof K]: K[P] extends (value: U, ...args: any[]) => U ? K[P] : never
+}
+```  
+**这样子呢，即时传入不符合的函数类型最终会返回never类型，那么就会有报错提示，同时也把索引签名干掉了。很完美**
