--- a/typescript/4.md
+++ b/typescript/4.md
@@ -1,4 +1,5 @@
-{
+## Partial
+```ts
   // Partial
   interface Todo {
     title: string;
@@ -8,9 +9,10 @@
   type MyPartial<T> = { [P in keyof T]?: T[P] };
   type TypeTodo1 = Partial<Todo>;
   type TypeTodo2 = MyPartial<Todo>;
-}
+```
 
-{
+## Readonly
+```ts
   // Readonly
   interface Todo {
     title: string;
@@ -20,9 +22,9 @@
   type MyReadonly<T> = { readonly [P in keyof T]: T[P] };
   type TypeTodo1 = Readonly<Todo>;
   type TypeTodo2 = MyReadonly<Todo>;
-}
-
-{
+```
+## Record
+```ts
   // Record
   interface PageInfo {
     title: string;
@@ -34,9 +36,10 @@
   type MyRecord<T extends string | number | symbol, U> = { [P in T]: U };
   type TypeTodo1 = Record<Page, PageInfo>;
   type TypeTodo2 = MyRecord<Page, PageInfo>;
-}
+```
 
-{
+## Pick
+```ts
   // Pick
   interface Todo {
     title: string;
@@ -46,17 +49,19 @@
   type MyPick<T, U extends keyof T> = { [P in U]: T[P] };
   type TypeTodo1 = Pick<Todo, "description">;
   type TypeTodo2 = MyPick<Todo, "description">;
-}
+```
 
-{
+## Exclude
+```ts
   // Exclude
   type MyExclude<T, U> = T extends U ? never : T;
   type T0 = Exclude<"a" | "b" | "c", "a">; // "b" | "c"
   type T1 = Exclude<"a" | "b" | "c", "a" | "b">; // "c"
   type A2 = MyExclude<"a" | "b" | "c", "a">;
-}
+```
 
-{
+## Omit
+```ts
   // Omit
   interface Todo {
     title: string;
@@ -66,24 +71,27 @@
   type MyOmit<T, U extends keyof T> = Pick<T, Exclude<keyof T, U>>;
   type TodoPreview = Omit<Todo, "description">;
   type TodoPreview2 = MyOmit<Todo, "description">;
-}
+```
 
-{
+## Extract
+```ts
   // Extract
   type MyExtract<T, U> = T extends U ? T : never;
   type T0 = Extract<"a" | "b" | "c", "a" | "f">; // "a"
   type T01 = MyExtract<"a" | "b" | "c", "a" | "f">; // "a"
   type T1 = Extract<string | number | (() => void), Function>; // () => void
-}
+```
 
-{
+## NonNullable
+```ts
   // NonNullable
   type MyNonNullable<T> = Exclude<T, null>;
   type T0 = NonNullable<string | number | undefined>; // string | number
   type T1 = NonNullable<string[] | null | undefined>; // string[]
-}
+```
 
-{
+## ReturnType
+```ts
   // ReturnType
   type MyReturnType<T extends (...args: any[]) => any> = T extends (
     ...args: any[]
@@ -97,16 +105,17 @@
     : any;
   type T0 = ReturnType<() => string>; // string
   type T1 = ReturnType<(s: string) => void>; // void
-  type T2 = ReturnType< <T>() => T >; // unknown
-  type T3 = ReturnType< <T extends U, U extends number[]>() => T >; // number[]
+  type T2 = ReturnType<<T>() => T>; // unknown
+  type T3 = ReturnType<<T extends U, U extends number[]>() => T>; // number[]
   type T5 = ReturnType<any>; // any
   type T6 = ReturnType<never>; // any
   //type T7 = ReturnType<string>; // Error
   //type T8 = ReturnType<Function>; // Error
   type T9 = MyReturnParamsType<(a: boolean, ...args: string[]) => void>;
-}
+```
 
-{
+## InstanceType
+```ts
   // InstanceType
   interface Obj {
     a: string;
@@ -135,5 +144,4 @@
   //type T3 = InstanceType<string>;  // Error
   //type T4 = InstanceType<Function>;  // Error
   type T5 = MyInstanceParamsType<TestA>;
-}
-
+```
